--- a/前端/login.html
+++ b/前端/login.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 
 <head>
-    <title>Title</title>
+    <title>迎新系统-哈尔滨工业大学（威海）</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,7 +16,7 @@
 <body>
     <!-- head -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-        <div class="top_container">
+        <div class="top-container">
             <a class="navbar-brand" href="#">
                 <img height="40" src="img/logo.svg" />
                 <span class="top-title">迎新系统</span>
@@ -25,14 +25,72 @@
     </nav>
 
     <!-- contianer -->
-    <div class="container" style="padding: 20px">
+    <div class="body-container" style="padding: 20px">
         <div class="row">
-            <div class="col-8">
+            <div class="col-md-7 d-none d-md-block">
                 <img src="http://www.hitwh.edu.cn/_upload/article/images/4e/4a/7f2732964561a6fc97bc727662d6/62fa4c22-18e3-4332-8787-ff64007ebccd.jpg"
-                    class="img-fluid" style="border-radius:15px">
+                    class="img-fluid" style="border-radius:15px;">
             </div>
-            <div class="col-4">
+            <div class="col-md-5">
+                <div class="card">
+                    <div class="card-header">
+                        <ul class="nav nav-pills card-header-pills" role="tablist">
+                            <li class="nav-item">
+                                <a class="nav-link active" id="newStudent-tab" data-toggle="tab" href="#new" role="tab"
+                                    aria-controls="new" aria-selected="true">新生</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="oldStudent-tab" data-toggle="tab" href="#old" role="tab"
+                                    aria-controls="old" aria-selected="true">老生</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="admin-tab" data-toggle="tab" href="#admin" role="tab"
+                                    aria-controls="admin" aria-selected="true">管理员</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="card-body tab-content">
+                        <div class="tab-pane fade show active" id="new" role="tabpanel"
+                            aria-labelledby="newStudent-tab">
+                            <h4 class="card-title">新生登陆</h4>
+                            <div class="form-group">
+                                <label for="examId">考生号</label>
+                                <input type="text" class="form-control" id="examId" placeholder="填写您的考生号">
+                            </div>
+                            <div class="form-group">
+                                <label for="perId">身份证号</label>
+                                <input type="text" class="form-control" id="perId" placeholder="填写身份证号">
+                            </div>
+                            <button class="btn btn-block btn-primary" id="newLogin">查询</button>
+                        </div>
 
+                        <div class="tab-pane fade" id="old" role="tabpanel" aria-labelledby="oldStudent-tab">
+                            <h4 class="card-title">老生登陆</h4>
+                            <div class="form-group">
+                                <label for="examId">姓名</label>
+                                <input type="text" class="form-control" id="name" placeholder="填写您的姓名">
+                            </div>
+                            <div class="form-group">
+                                <label for="perId">身份证号</label>
+                                <input type="text" class="form-control" id="perId" placeholder="填写身份证号">
+                            </div>
+                            <button class="btn btn-block btn-secondary" id="oldLogin">查询</button>
+                        </div>
+
+                        <div class="tab-pane fade" id="admin" role="tabpanel" aria-labelledby="admin-tab">
+                            <h4 class="card-title">管理员登陆</h4>
+                            <div class="form-group">
+                                <label for="examId">用户名</label>
+                                <input type="text" class="form-control" id="useid" placeholder="填写准用户名">
+                            </div>
+                            <div class="form-group">
+                                <label for="perId">密码</label>
+                                <input type="password" class="form-control" id="password" placeholder="填写密码">
+                            </div>
+                            <button class="btn btn-block btn-danger" id="adminLogin">查询</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -48,8 +106,8 @@
             <div class="foot-color-e"></div>
         </div>
         <div class="footer">
-            <div class="row footer_contianer">
-                <div class="col-sm-6 connect_info">
+            <div class="row footer-contianer">
+                <div class="col-sm-6 connect-info">
                     <p>联系方式</p>
                     <p>地址：山东省威海市环翠区文化西路2号</p>
                     <p>邮编：264209</p>
@@ -58,11 +116,11 @@
                     <p>电子邮箱：zsb@hitwh.edu.cn</p>
                 </div>
                 <div class="col-sm-6" style="text-align: center;vertical-align:bottom; ">
-                    <embed class="footer_logo" src="img/logo.svg" />
+                    <embed class="footer-logo" src="img/logo.svg" />
                 </div>
             </div>
-            <div class="copy_right">
-                <div class="copyright_div">
+            <div class="copy-right">
+                <div class="copyright-div">
                     <p>哈尔滨工业大学（威海）本科生招生办公室 版权所有</p>
                     <p>Copyright©2017 Harbin Institute of Technology , Weihai</p>
                 </div>
