--- a/前端/login.html
+++ b/前端/login.html
@@ -8,8 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -61,7 +60,7 @@
                                 <label for="perId">身份证号</label>
                                 <input type="text" class="form-control" id="perId" placeholder="填写身份证号">
                             </div>
-                            <button class="btn btn-block btn-primary" id="newLogin">查询</button>
+                            <button class="btn btn-block btn-primary" id="newLogin">登陆</button>
                         </div>
 
                         <div class="tab-pane fade" id="old" role="tabpanel" aria-labelledby="oldStudent-tab">
@@ -74,7 +73,7 @@
                                 <label for="perId">身份证号</label>
                                 <input type="text" class="form-control" id="perId" placeholder="填写身份证号">
                             </div>
-                            <button class="btn btn-block btn-secondary" id="oldLogin">查询</button>
+                            <button class="btn btn-block btn-secondary" id="oldLogin">登陆</button>
                         </div>
 
                         <div class="tab-pane fade" id="admin" role="tabpanel" aria-labelledby="admin-tab">
@@ -87,7 +86,7 @@
                                 <label for="perId">密码</label>
                                 <input type="password" class="form-control" id="password" placeholder="填写密码">
                             </div>
-                            <button class="btn btn-block btn-danger" id="adminLogin">查询</button>
+                            <button class="btn btn-block btn-danger" id="adminLogin">登陆</button>
                         </div>
                     </div>
                 </div>
@@ -138,9 +137,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
         integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
