提交部分更改

--- a/前端/admin/index-new.html
+++ b/前端/admin/index-new.html
@@ -301,7 +301,7 @@
 					<div class="card-columns">
 
 						<!-- Content Column -->
-						<div class="card shadow mb-4">
+						<div class="card mb-4">
 							<div class="card-header py-3">
 								<h6 class="m-0 font-weight-bold text-primary">学校简介</h6>
 							</div>
@@ -317,7 +317,7 @@
 							</div>
 						</div>
 
-						<div class="card shadow mb-4">
+						<div class="card mb-4">
 							<div class="card-header py-3">
 								<h6 class="m-0 font-weight-bold text-primary">你的同学</h6>
 							</div>
@@ -338,7 +338,7 @@
 							</div>
 						</div>
 
-						<div class="card shadow mb-4">
+						<div class="card mb-4">
 							<div class="card-header py-3">
 								<h6 class="m-0 font-weight-bold text-primary">你的室友</h6>
 							</div>
@@ -376,7 +376,7 @@
 							</div>
 						</div>
 
-						<div class="card shadow mb-4">
+						<div class="card mb-4">
 							<div class="card-header py-3">
 								<h6 class="m-0 font-weight-bold text-primary">专业介绍</h6>
 							</div>
@@ -390,7 +390,7 @@
 							</div>
 						</div>
 
-						<div class="card shadow mb-4">
+						<div class="card mb-4">
 							<div class="card-header py-3">
 								<h6 class="m-0 font-weight-bold text-primary">宿舍环境</h6>
 							</div>
@@ -404,7 +404,7 @@
 							</div>
 						</div>
 
-						<div class="card shadow mb-4">
+						<div class="card mb-4">
 							<div class="card-header py-3">
 								<h6 class="m-0 font-weight-bold text-primary">老乡信息</h6>
 							</div>
@@ -446,67 +446,68 @@
 						</div>
 
 					</div>
-					<!-- /.container-fluid -->
-
 				</div>
-				<!-- End of Main Content -->
-
-				<!-- Footer -->
-				<footer class="sticky-footer bg-white">
-					<div class="container my-auto">
-						<div class="copyright text-center my-auto">
-							<span>Copyright &copy; Harbin Institute of Technology , Weihai</span>
-						</div>
-					</div>
-				</footer>
-				<!-- End of Footer -->
+				<!-- /.container-fluid -->
 
 			</div>
-			<!-- End of Content Wrapper -->
+			<!-- End of Main Content -->
+
+			<!-- Footer -->
+			<footer class="sticky-footer bg-white">
+				<div class="container my-auto">
+					<div class="copyright text-center my-auto">
+						<span>Copyright &copy; Harbin Institute of Technology , Weihai</span>
+					</div>
+				</div>
+			</footer>
+			<!-- End of Footer -->
 
 		</div>
-		<!-- End of Page Wrapper -->
+		<!-- End of Content Wrapper -->
 
-		<!-- Scroll to Top Button-->
-		<a class="scroll-to-top rounded" href="#page-top">
-			<i class="fas fa-angle-up"></i>
-		</a>
+	</div>
+	<!-- End of Page Wrapper -->
 
-		<!-- Logout Modal-->
-		<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-			aria-hidden="true">
-			<div class="modal-dialog" role="document">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-						<button class="close" type="button" data-dismiss="modal" aria-label="Close">
-							<span aria-hidden="true">×</span>
-						</button>
-					</div>
-					<div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-					<div class="modal-footer">
-						<button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-						<a class="btn btn-primary" href="login.html">Logout</a>
-					</div>
+	<!-- Scroll to Top Button-->
+	<a class="scroll-to-top rounded" href="#page-top">
+		<i class="fas fa-angle-up"></i>
+	</a>
+
+	<!-- Logout Modal-->
+	<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+		aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+					<button class="close" type="button" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">×</span>
+					</button>
+				</div>
+				<div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+				<div class="modal-footer">
+					<button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+					<a class="btn btn-primary" href="login.html">Logout</a>
 				</div>
 			</div>
 		</div>
+	</div>
 
-		<!-- Bootstrap core JavaScript-->
-		<script src="vendor/jquery/jquery.min.js"></script>
-		<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+	<!-- Bootstrap core JavaScript-->
+	<script src="vendor/jquery/jquery.min.js"></script>
+	<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-		<!-- Core plugin JavaScript-->
-		<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+	<!-- Core plugin JavaScript-->
+	<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-		<!-- Custom scripts for all pages-->
-		<script src="js/sb-admin-2.min.js"></script>
+	<!-- Custom scripts for all pages-->
+	<script src="js/sb-admin-2.min.js"></script>
 
-		<!-- Page level plugins -->
-		<script src="vendor/chart.js/Chart.min.js"></script>
+	<!-- Page level plugins -->
+	<script src="vendor/chart.js/Chart.min.js"></script>
 
-		<!-- Chart -->
-		<script type="text/javascript" src="js/chart.js"></script>
+	<!-- Chart -->
+	<script type="text/javascript" src="js/chart.js"></script>
 
 
 </body>
