--- a/前端/admin/yourCountrymen-new.html
+++ b/前端/admin/yourCountrymen-new.html
@@ -238,15 +238,16 @@
 							</div>
 						</div>
 
-						<!-- Infomation Card shcool -->
+						<!-- Infomation Card ID card -->
 						<div class="col-xl-3 col-md-6 mb-4">
 							<div class="card border-left-success shadow h-100 py-2">
 								<div class="card-body">
 									<div class="row no-gutters align-items-center">
 										<div class="col mr-2">
-											<div class="text-xs font-weight-bold text-success text-uppercase mb-1">所在院系
+											<div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+												你的身份证号
 											</div>
-											<div class="h5 mb-0 font-weight-bold text-gray-800">计算机类</div>
+											<div class="h5 mb-0 font-weight-bold text-gray-800">341000000000000000</div>
 										</div>
 										<div class="col-auto">
 											<i class="fas fa-chalkboard-teacher fa-2x text-gray-300"></i>
@@ -256,22 +257,23 @@
 							</div>
 						</div>
 
-						<!-- Infomation Card department -->
+						<!-- Infomation Card local -->
 						<div class="col-xl-3 col-md-6 mb-4">
 							<div class="card border-left-info shadow h-100 py-2">
 								<div class="card-body">
 									<div class="row no-gutters align-items-center">
 										<div class="col mr-2">
-											<div class="text-xs font-weight-bold text-info text-uppercase mb-1">宿舍</div>
+											<div class="text-xs font-weight-bold text-info text-uppercase mb-1">识别地区
+											</div>
 											<div class="row no-gutters align-items-center">
 												<div class="col-auto">
-													<div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">9公寓-325室
+													<div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">安徽省-黄山市
 													</div>
 												</div>
 											</div>
 										</div>
 										<div class="col-auto">
-											<i class="fas fa-building fa-2x text-gray-300"></i>
+											<i class="fas fa-map fa-2x text-gray-300"></i>
 										</div>
 									</div>
 								</div>
@@ -284,12 +286,12 @@
 								<div class="card-body">
 									<div class="row no-gutters align-items-center">
 										<div class="col mr-2">
-											<div class="text-xs font-weight-bold text-warning text-uppercase mb-1">报道时间
+											<div class="text-xs font-weight-bold text-warning text-uppercase mb-1">毕业院校
 											</div>
-											<div class="h5 mb-0 font-weight-bold text-gray-800">9月1日</div>
+											<div class="h5 mb-0 font-weight-bold text-gray-800">屯溪一中</div>
 										</div>
 										<div class="col-auto">
-											<i class="fas fa-comments fa-2x text-gray-300"></i>
+											<i class="fas fa-graduation-cap fa-2x text-gray-300"></i>
 										</div>
 									</div>
 								</div>
@@ -303,230 +305,172 @@
 						<!-- Content Column -->
 						<div class="mb-4">
 							<!-- Illustrations -->
-							<div class="card shadow mb-4">
-								<div class="card-header py-3">
-									<h6 class="m-0 font-weight-bold text-primary">学校简介</h6>
-								</div>
-								<div class="card-body">
-									<div class="text-center">
-										<img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;"
-											src="img/undraw_posting_photo.svg" alt="">
-									</div>
-									<p>
-										哈尔滨工业大学（以下简称哈工大）是一所有着近百年历史、世界知名的工科强校，2017年入选国家“双一流”建设A类高校，是我国首批入选国家“985工程”重点建设的大学，拥有以38位院士为带头人的雄厚师资，有9个国家一级重点学科，10个学科名列全国前五名，其中，名列前茅的工科类重点学科数量位居全国第二，工程学在全球排名第六。
-									</p>
-									<a target="_blank" rel="nofollow" href="https://undraw.co/">更多介绍 &rarr;</a>
-								</div>
-							</div>
-						</div>
-
-						<div class="mb-4">
-							<!-- Illustrations -->
-							<div class="card shadow mb-4">
-								<div class="card-header py-3">
-									<h6 class="m-0 font-weight-bold text-primary">你的同学</h6>
-								</div>
-								<div class="card-body">
-									<div class="row">
-										<div class="col-xl-6 col-lg-12">
-											<div class="chart-pie pt-4">
-												<canvas id="groupAccountChart"></canvas>
-											</div>
-										</div>
-										<div class="col-xl-6 col-lg-12">
-											<div class="chart-pie pt-4">
-												<canvas id="allAccountChart"></canvas>
-											</div>
-										</div>
-									</div>
-									<a target="_blank" rel="nofollow" href="https://undraw.co/">查看所有同学 &rarr;</a>
-
-								</div>
-							</div>
-
-							<div class="mb-4">
-								<!-- Illustrations -->
-								<div class="card shadow mb-4">
-									<div class="card-header py-3">
-										<h6 class="m-0 font-weight-bold text-primary">你的室友</h6>
-									</div>
-									<div class="card-body">
-										<table class="table table-bordered">
-											<thead>
-												<tr role="row">
-													<th>姓名</th>
-													<th>学号</th>
-													<th>床位</th>
-													<th>来自</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr role="row">
-													<td>小明</td>
-													<td>160410401</td>
-													<td>4</td>
-													<td>山东</td>
-												</tr>
-												<tr role="row">
-													<td>小明</td>
-													<td>160410401</td>
-													<td>4</td>
-													<td>山东</td>
-												</tr>
-												<tr role="row">
-													<td>小明</td>
-													<td>160410401</td>
-													<td>4</td>
-													<td>山东</td>
-												</tr>
-											</tbody>
-										</table>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="mb-4">
-							<!-- Illustrations -->
-							<div class="card shadow mb-4">
-								<div class="card-header py-3">
-									<h6 class="m-0 font-weight-bold text-primary">专业介绍</h6>
-								</div>
-								<div class="card-body">
-									<div class="text-center">
-										<img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;"
-											src="img/undraw_posting_photo.svg" alt="">
-									</div>
-									<p>使用说明仔细看下面：</p>
-									<a target="_blank" rel="nofollow" href="https://undraw.co/">更多介绍 &rarr;</a>
-								</div>
-							</div>
-						</div>
-
-						<div class="mb-4">
-							<!-- Illustrations -->
-							<div class="card shadow mb-4">
-								<div class="card-header py-3">
-									<h6 class="m-0 font-weight-bold text-primary">宿舍环境</h6>
-								</div>
-								<div class="card-body">
-									<div class="text-center">
-										<img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;"
-											src="img/undraw_posting_photo.svg" alt="">
-									</div>
-									<p>使用说明仔细看下面：</p>
-									<a target="_blank" rel="nofollow" href="https://undraw.co/">更多介绍 &rarr;</a>
-								</div>
-							</div>
-						</div>
-
-						<div class="mb-4">
-							<!-- Illustrations -->
-							<div class="card shadow mb-4">
+							<div class="card mb-4">
 								<div class="card-header py-3">
 									<h6 class="m-0 font-weight-bold text-primary">老乡信息</h6>
 								</div>
 								<div class="card-body">
-									<div class="col-sm-12">
-										<table class="table table-bordered">
-											<thead>
-												<tr role="row">
-													<th>姓名</th>
-													<th>学号</th>
-													<th>公寓</th>
-													<th>毕业学校</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr role="row">
-													<td>小明</td>
-													<td>160410401</td>
-													<td>8</td>
-													<td>山东省实验中学</td>
-												</tr>
-												<tr role="row">
-													<td>小明</td>
-													<td>160410401</td>
-													<td>8</td>
-													<td>山东省实验中学</td>
-												</tr>
-												<tr role="row">
-													<td>小明</td>
-													<td>160410401</td>
-													<td>8</td>
-													<td>山东省实验中学</td>
-												</tr>
-											</tbody>
-										</table>
-										<a target="_blank" rel="nofollow" href="https://undraw.co/">查看全部老乡 &rarr;</a>
-									</div>
+									<table class="table table-bordered">
+										<thead>
+											<tr role="row">
+												<th>姓名</th>
+												<th>学号</th>
+												<th>性别</th>
+												<th>毕业学校</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr role="row">
+												<td>小明</td>
+												<td>160410401</td>
+												<td>男</td>
+												<td>屯溪一中</td>
+											</tr>
+											<tr role="row">
+												<td>小明</td>
+												<td>160410401</td>
+												<td>男</td>
+												<td>祁门中学</td>
+											</tr>
+											<tr role="row">
+												<td>小明</td>
+												<td>160410401</td>
+												<td>男</td>
+												<td>歙县中学</td>
+											</tr>
+											<tr role="row">
+												<td>小明</td>
+												<td>160410401</td>
+												<td>男</td>
+												<td>祁门中学</td>
+											</tr>
+											<tr role="row">
+												<td>小明</td>
+												<td>160410401</td>
+												<td>男</td>
+												<td>祁门中学</td>
+											</tr>
+											<tr role="row">
+												<td>小明</td>
+												<td>160410401</td>
+												<td>男</td>
+												<td>祁门中学</td>
+											</tr>
+											<tr role="row">
+												<td>小明</td>
+												<td>160410401</td>
+												<td>男</td>
+												<td>歙县中学</td>
+											</tr>
+											<tr role="row">
+												<td>小明</td>
+												<td>160410401</td>
+												<td>男</td>
+												<td>歙县中学</td>
+											</tr>
+										</tbody>
+									</table>
 								</div>
 							</div>
-
 						</div>
 
-					</div>
-					<!-- /.container-fluid -->
-
-				</div>
-				<!-- End of Main Content -->
-
-				<!-- Footer -->
-				<footer class="sticky-footer bg-white">
-					<div class="container my-auto">
-						<div class="copyright text-center my-auto">
-							<span>Copyright &copy; Harbin Institute of Technology , Weihai</span>
+						<div class="mb-4">
+							<!-- Illustrations -->
+							<div class="card mb-4">
+								<div class="card-header py-3">
+									<h6 class="m-0 font-weight-bold text-primary">与你同校的</h6>
+								</div>
+								<div class="card-body">
+									<table class="table table-bordered">
+										<thead>
+											<tr role="row">
+												<th>姓名</th>
+												<th>学号</th>
+												<th>性别</th>
+												<th>毕业学校</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr role="row">
+												<td>小明</td>
+												<td>160410401</td>
+												<td>男</td>
+												<td>屯溪一中</td>
+											</tr>
+											<tr role="row">
+												<td>小明</td>
+												<td>160410401</td>
+												<td>男</td>
+												<td>屯溪一中</td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+							</div>
 						</div>
 					</div>
-				</footer>
-				<!-- End of Footer -->
+				</div>
+				<!-- /.container-fluid -->
 
 			</div>
-			<!-- End of Content Wrapper -->
+			<!-- End of Main Content -->
 
+			<!-- Footer -->
+			<footer class="sticky-footer bg-white">
+				<div class="container my-auto">
+					<div class="copyright text-center my-auto">
+						<span>Copyright &copy; Harbin Institute of Technology , Weihai</span>
+					</div>
+				</div>
+			</footer>
+			<!-- End of Footer -->
 		</div>
-		<!-- End of Page Wrapper -->
+	</div>
+	<!-- End of Content Wrapper -->
 
-		<!-- Scroll to Top Button-->
-		<a class="scroll-to-top rounded" href="#page-top">
-			<i class="fas fa-angle-up"></i>
-		</a>
+	</div>
+	<!-- End of Page Wrapper -->
 
-		<!-- Logout Modal-->
-		<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-			aria-hidden="true">
-			<div class="modal-dialog" role="document">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-						<button class="close" type="button" data-dismiss="modal" aria-label="Close">
-							<span aria-hidden="true">×</span>
-						</button>
-					</div>
-					<div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-					<div class="modal-footer">
-						<button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-						<a class="btn btn-primary" href="login.html">Logout</a>
-					</div>
+	<!-- Scroll to Top Button-->
+	<a class="scroll-to-top rounded" href="#page-top">
+		<i class="fas fa-angle-up"></i>
+	</a>
+
+	<!-- Logout Modal-->
+	<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+		aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+					<button class="close" type="button" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">×</span>
+					</button>
+				</div>
+				<div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+				<div class="modal-footer">
+					<button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+					<a class="btn btn-primary" href="login.html">Logout</a>
 				</div>
 			</div>
 		</div>
+	</div>
 
-		<!-- Bootstrap core JavaScript-->
-		<script src="vendor/jquery/jquery.min.js"></script>
-		<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+	<!-- Bootstrap core JavaScript-->
+	<script src="vendor/jquery/jquery.min.js"></script>
+	<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-		<!-- Core plugin JavaScript-->
-		<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+	<!-- Core plugin JavaScript-->
+	<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-		<!-- Custom scripts for all pages-->
-		<script src="js/sb-admin-2.min.js"></script>
+	<!-- Custom scripts for all pages-->
+	<script src="js/sb-admin-2.min.js"></script>
 
-		<!-- Page level plugins -->
-		<script src="vendor/chart.js/Chart.min.js"></script>
+	<!-- Page level plugins -->
+	<script src="vendor/chart.js/Chart.min.js"></script>
 
-		<!-- Chart -->
-		<script type="text/javascript" src="js/chart.js"></script>
+	<!-- Chart -->
+	<script type="text/javascript" src="js/chart.js"></script>
 
 
 </body>
