--- a/前端/admin/index-new.html
+++ b/前端/admin/index-new.html
@@ -66,7 +66,6 @@
 				<div id="collapseInfo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
 						<h6 class="collapse-header">你可以查看：</h6>
-						<a class="collapse-item" href="">你的信息</a>
 						<a class="collapse-item" href="">你的班级</a>
 						<a class="collapse-item" href="">你的宿舍</a>
 						<a class="collapse-item" href="">你的老乡</a>
@@ -366,10 +365,7 @@
 											<td>山东</td>
 										</tr>
 										<tr role="row">
-											<td>小明</td>
-											<td>160410401</td>
-											<td>4</td>
-											<td>山东</td>
+											<td colspan="4">还没有信息</td>
 										</tr>
 									</tbody>
 								</table>
