- 修改文档name，增加文档“还有的问题” - 修改部分blade模板 - 增加admin部分模板，同时添加控制器和路由 - 对文件上传的blade模板增加上传按钮，同时添加为ajax模式，回调为jsonp

--- a/前端/admin/insertSchoolInfo-admin.html
+++ b/前端/admin/insertSchoolInfo-admin.html
@@ -278,9 +278,10 @@
 							<h6 class="m-0 font-weight-bold text-primary">学校信息</h6>
 						</div>
 						<div class="card-body">
-							<div id="schoolInfoEditor">
+							<div id="schoolInfoEditor" class="mb-4">
 								<p>学校信息在这里更改</p>
 							</div>
+							<button type="button" class="btn btn-primary" id="submitSchoolInfo">提交</button>
 						</div>
 					</div>
 
@@ -329,11 +330,12 @@
 								</table>
 							</div>
 							<div class="col-md-4 col-sm-12">
-								<div class="form-group">
+								<div class="form-group mb-4">
 									<label for="deptInfoUpload">上传院系信息</label>
 									<input type="file" id="deptInfoUpload">
 									<p class="help-block">上传模板文件</p>
 								</div>
+								<button type="button" class="btn btn-primary" id="submitDeptInfo">提交</button>
 							</div>
 						</div>
 					</div>
