province count & correct some urls
- 回到首页的链接：/stu/index -> /stu
- ‘报道'（×）->’报到‘（√）
-  完善了新生首页，同学省份分布统计图；

--- a/前端/admin/index-new.html
+++ b/前端/admin/index-new.html
@@ -114,8 +114,8 @@
 				<div id="collapseWel" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
 						<h6 class="collapse-header">你可以查看：</h6>
-						<a class="collapse-item" href="">报道说明</a>
-						<a class="collapse-item" href="">开始报道</a>
+						<a class="collapse-item" href="">报到说明</a>
+						<a class="collapse-item" href="">开始报到</a>
 					</div>
 				</div>
 			</li>
@@ -283,7 +283,7 @@
 								<div class="card-body">
 									<div class="row no-gutters align-items-center">
 										<div class="col mr-2">
-											<div class="text-xs font-weight-bold text-warning text-uppercase mb-1">报道时间
+											<div class="text-xs font-weight-bold text-warning text-uppercase mb-1">报到时间
 											</div>
 											<div class="h5 mb-0 font-weight-bold text-gray-800">9月1日</div>
 										</div>
