--- a/前端/login.html
+++ b/前端/login.html
@@ -37,7 +37,7 @@
 									<a class="nav-link active" id="newStudent-tab" data-toggle="tab" href="#new" role="tab" aria-controls="new" aria-selected="true">新生</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" id="oldStudent-tab" data-toggle="tab" href="#old" role="tab" aria-controls="old" aria-selected="true">老生</a>
+									<a class="nav-link" id="oldStudent-tab" data-toggle="tab" href="#old" role="tab" aria-controls="old" aria-selected="true">在校生</a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link" id="admin-tab" data-toggle="tab" href="#admin" role="tab" aria-controls="admin" aria-selected="true">管理员</a>
@@ -60,7 +60,7 @@
 							</form>
 
 							<form class="tab-pane fade" id="old" role="tabpanel" aria-labelledby="oldStudent-tab" method="POST" action="./login">
-								<h4 class="card-title">老生登陆</h4>
+								<h4 class="card-title">在校生登陆</h4>
 								<input type="hidden" name="loginType" value="old">
 								<div class="form-group">
 									<label for="examId">姓名</label>
