--- a/前端/admin/newStudentManage-admin.html
+++ b/前端/admin/newStudentManage-admin.html
@@ -220,7 +220,7 @@
 								<div class="card-body">
 									<div class="row no-gutters align-items-center">
 										<div class="col mr-2">
-											<div class="text-xs font-weight-bold text-success text-uppercase mb-1">老生人数
+											<div class="text-xs font-weight-bold text-success text-uppercase mb-1">在校生人数
 											</div>
 											<div class="h5 mb-0 font-weight-bold text-gray-800">12000</div>
 										</div>
